--- a/kadry/src/main/webapp/admin/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/admin/sub/layout/west.xhtml
@@ -14,8 +14,8 @@
                              rowKey="#{item1.id}" 
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{firmaView.aktywuj(firmaView.selectedeast)}" partialSubmit="true" global="false" update="north,@(form)"/>
-                    <p:ajax event="rowSelect" listener="#{angazView.findByFirma(firmaView.selectedeast)}" partialSubmit="true" global="false" update="@(form)"/>
+                    <p:ajax event="rowSelect" listener="#{firmaView.aktywuj(firmaView.selectedeast)}" partialSubmit="true" global="false" update="north,@(.formadmin)"/>
+                    <p:ajax event="rowSelect" listener="#{angazView.findByFirma(firmaView.selectedeast)}" partialSubmit="true" global="false" update="@(.formadmin)"/>
                     <p:column sortBy="#{item1.nazwa}" sortOrder="asc" filterBy="#{item1.nazwa}" filterMatchMode="contains">
                         <h:outputText value="#{item1.nazwa}"/>
                     </p:column>
@@ -33,7 +33,7 @@
                              rowKey="#{item2.id}" emptyMessage="Firma nie ma pracowników"
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{angazView.aktywujPlace(angazView.selectedeast)}" partialSubmit="true" global="false" update="north,@(form)"/>
+                    <p:ajax event="rowSelect" listener="#{angazView.aktywujPlace(angazView.selectedeast)}" partialSubmit="true" global="false" update="north,@(.formadmin)"/>
                     <p:column>
                         <h:outputText value="#{item2.pracownik.nazwiskoImie}"/>
                     </p:column>
