--- a/kadry/src/main/webapp/umowa/sub/layout/north.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/layout/north.xhtml
@@ -8,7 +8,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
     >
     
-         <h:form id="north">
+         <h:form styleClass="formumowa" id="north">
                 <div class="card-container blue-container col-12 flex">
                     <div class="inline-block col-5 bg-taxman text-3xl flex-auto text-white font-bold p-1 border-round ">
                         <h:outputText value="#{wpisView.firma.nazwa}"/>
