--- a/kadry/src/main/webapp/umowa/sub/layout/south.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/layout/south.xhtml
@@ -9,7 +9,7 @@
     >
 
     
-        <h:form id="south">
+        <h:form styleClass="formumowa" id="south">
             
         </h:form>
     
