--- a/kadry/src/main/webapp/umowa/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/layout/west.xhtml
@@ -15,14 +15,14 @@
                              rowKey="#{item1.id}" 
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{firmaView.aktywuj(firmaView.selectedeast)}" partialSubmit="true" global="false" update="north,@(form)"/>
+                    <p:ajax event="rowSelect" listener="#{firmaView.aktywuj(firmaView.selectedeast)}" partialSubmit="true" global="false" update="north,@(.formumowa),@(.formumowaprac)"/>
                     <p:column sortBy="#{item1.nazwa}" sortOrder="asc" filterBy="#{item1.nazwa}" filterMatchMode="contains">
                         <h:outputText value="#{item1.nazwa}"/>
                     </p:column>
                 </p:dataTable>
             </p:panel>
         </h:form>
-         <h:form id="EastPracownicy">
+         <h:form styleClass="formumowaprac" id="EastPracownicy">
             <p:panel header="Pracownicy">
                 <p:selectBooleanCheckbox id="wyboropcji" value="#{angazView.pokazwszystkich}">
                     <p:ajax event="change" listener="#{angazView.pobierzpracownikow2}" update="@form" global="false"/>
@@ -33,7 +33,7 @@
                              rowKey="#{item2.id}" emptyMessage="Firma nie ma pracowników"
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{angazView.aktywuj(angazView.selectedeast)}" partialSubmit="true" global="false" update="north,@(form)"/>
+                    <p:ajax event="rowSelect" listener="#{angazView.aktywuj(angazView.selectedeast)}" partialSubmit="true" global="false" update="north,@(.formumowa)"/>
                     <p:column sortBy="#{item2.pracownik.nazwiskoImie}">
                         <h:outputText value="#{item2.pracownik.nazwiskoImie}"/>
                     </p:column>
