--- a/kadry/src/main/webapp/pit4/sub/layout/north.xhtml
+++ b/kadry/src/main/webapp/pit4/sub/layout/north.xhtml
@@ -7,8 +7,8 @@
     xmlns:bcf="http://brzaskun.com/facelets"
       xmlns:ui="http://java.sun.com/jsf/facelets"
     >
-        <h:form id="north">
-                <div class="card-container blue-container col-12 flex">
+       <h:form styleClass="formumowa" id="north">
+                <div class="card-container blue-container col-11 flex">
                     <div class="inline-block col-5 bg-taxman text-3xl flex-auto text-white font-bold p-1 border-round ">
                         <h:outputText value="#{wpisView.firma.nazwa}"/>
                     </div>
@@ -18,21 +18,22 @@
                     <div class="inline-block  col-1 bg-taxman text-3xl flex-auto text-white font-bold  p-1 border-round">
                         <h:outputText value="#{wpisView.pracownik.imie}"   rendered="#{wpisView.pracownik ne null}"/>
                     </div>
-                    <div class="inline-block  col-1 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
+                    <div class="inline-block  col-2 bg-taxman text-2xl flex-auto text-white font-bold text-center p-1 border-round">
                          <h:outputText value="#{wpisView.umowa.nrkolejny}"   rendered="#{wpisView.umowa ne null}"/>
                     </div>
-                   <div class="inline-block col-1 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
+                  <div class="inline-block col-1 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
                         <p:selectOneMenu id="rokWpisu" value="#{wpisView.rokWpisu}"  style="width: 100px;">
                             <f:selectItems value="#{roki.rokiList}"/>
                             <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
                         </p:selectOneMenu>
                     </div>
-                    <div class="inline-block col-1 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
-                        <p:selectOneMenu id="miesiacWpisu" value="#{wpisView.miesiacWpisu}"  style="width: 100px;">
+                    <div class="inline-block col-3 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
+                       <p:selectOneMenu id="miesiacWpisu" value="#{wpisView.miesiacWpisu}"  style="width: 100px;">
                             <f:selectItems value="#{mce.mceList}"/>
                             <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
                         </p:selectOneMenu>
                     </div>
             </div>
         </h:form>
+    
 </ui:composition>   
