--- a/kadry/src/main/webapp/pracownikumowy/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/pracownikumowy/sub/layout/west.xhtml
@@ -22,6 +22,20 @@
                 </p:dataTable>
             </p:panel>
         </h:form>-->
-    
+  <h:form>
+            <p:panel header="Wykaz firm" style="margin-top: 80px;"> 
+                <p:dataTable id="datalist" value="#{firmaView.lista}" var="item1"
+                             selectionMode="single" selection="#{firmaView.selectedeast}"
+                             rowKey="#{item1.id}" 
+                             style="height: 350px;overflow-y: scroll;"
+                             >
+                    <p:ajax event="rowSelect" listener="#{firmaView.aktywuj(firmaView.selectedeast)}" partialSubmit="true"/>
+                    <p:ajax event="rowSelect" listener="#{pracownikUmowyView.init()}"  global="true" update="north,akordeon"/>
+                    <p:column sortBy="#{item1.nazwa}" sortOrder="asc" filterBy="#{item1.nazwa}" filterMatchMode="contains">
+                        <h:outputText value="#{item1.nazwa}"/>
+                    </p:column>
+                </p:dataTable>
+            </p:panel>
+  </h:form>
 </ui:composition>   
 
