--- a/npkpir_23/web/manager/sub/layout/west.xhtml
+++ b/npkpir_23/web/manager/sub/layout/west.xhtml
@@ -30,8 +30,8 @@
                     <p:menuitem value="waloryzacja"  outcome="waloryzacja" icon="ui-icon-circle-arrow-e" />
                 </p:menu>
                 <p:menu>
-                    <p:menuitem value="faktura dodatki"  outcome="fakturadodatki" icon="ui-icon-circle-arrow-e" />
-                    <p:separator/>
+<!--                    <p:menuitem value="faktura dodatki"  outcome="fakturadodatki" icon="ui-icon-circle-arrow-e" />
+                    <p:separator/>-->
                     <p:menuitem value="czy jest karta"  outcome="czyjestkarta" icon="ui-icon-circle-arrow-e" />
                 </p:menu>
             </h:form>
