--- a/kadry/src/main/webapp/pracownikwykaz/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/pracownikwykaz/sub/layout/west.xhtml
@@ -9,18 +9,18 @@
     >
     
         <h:form>
-            <p:panel header="Wykaz firm" style="margin-top: 80px;"> 
+<!--            <p:panel header="Wykaz firm" style="margin-top: 80px;"> 
                 <p:dataTable id="datalist" value="#{firmaView.lista}" var="item1"
                              selectionMode="single" selection="#{firmaView.selectedeast}"
                              rowKey="#{item1.id}" 
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{firmaView.aktywuj(firmaView.selectedeast)}" partialSubmit="true" global="false" update="north,@(form)"/>
+                    <p:ajax event="rowSelect" listener="#{firmaView.aktywujPracWykaz(firmaView.selectedeast)}" partialSubmit="true" global="true" update="north,@(.formsrodek)"/>
                     <p:column sortBy="#{item1.nazwa}" sortOrder="asc" filterBy="#{item1.nazwa}" filterMatchMode="contains">
                         <h:outputText value="#{item1.nazwa}"/>
                     </p:column>
                 </p:dataTable>
-            </p:panel>
+            </p:panel>-->
         </h:form>
     
 </ui:composition>   
