--- a/kadry/src/main/webapp/pit/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/pit/sub/layout/west.xhtml
@@ -15,7 +15,7 @@
                              rowKey="#{item1.id}" 
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{firmaView.aktywuj(firmaView.selectedeast)}" partialSubmit="true"/>
+                    <p:ajax event="rowSelect" listener="#{kartaWynagrodzenView.aktywujKartaWyn(firmaView.selectedeast)}" partialSubmit="true"/>
                     <p:ajax event="rowSelect" listener="#{kartaWynagrodzenView.init()}" global="true" update="north,akordeon"/>
                     <p:column sortBy="#{item1.nazwa}" sortOrder="asc" filterBy="#{item1.nazwa}" filterMatchMode="contains">
                         <h:outputText value="#{item1.nazwa}"/>
