--- a/kadry/src/main/webapp/wydruki/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/wydruki/sub/layout/west.xhtml
@@ -15,7 +15,7 @@
                              rowKey="#{item1.id}" 
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{angazView.aktywujPracAngaze(firmaView.selectedeast)}" partialSubmit="true" global="false" update="north,@(.formumowa),@(.formumowaprac)"/>
+                    <p:ajax event="rowSelect" listener="#{zaswiadczeniaView.aktywujPracAngaze(firmaView.selectedeast)}" partialSubmit="true" global="false" update="north,@(.formumowa),@(.formumowaprac)"/>
                     <p:column sortBy="#{item1.nazwa}" sortOrder="asc" filterBy="#{item1.nazwa}" filterMatchMode="contains">
                         <h:outputText value="#{item1.nazwa}"/>
                     </p:column>
@@ -24,16 +24,16 @@
         </h:form>
          <h:form styleClass="formumowaprac" id="EastPracownicy">
             <p:panel header="Pracownicy">
-                <p:selectBooleanCheckbox id="wyboropcji" value="#{angazView.pokazwszystkich}">
+<!--                <p:selectBooleanCheckbox id="wyboropcji" value="#{angazView.pokazwszystkich}">
                     <p:ajax event="change" listener="#{angazView.pobierzpracownikow2}" update="@form" global="false"/>
-                </p:selectBooleanCheckbox>
-                <p:outputLabel for="wyboropcji" value="pobierz wszystkich"/>
-                <p:dataTable id="datalist" value="#{angazView.listaeast2}" var="item2"
-                             selectionMode="single" selection="#{angazView.selectedeast}" sortBy="#{item2.pracownik.nazwiskoImie}"
+                </p:selectBooleanCheckbox>-->
+<!--                <p:outputLabel for="wyboropcji" value="pobierz wszystkich"/>-->
+                <p:dataTable id="datalist" value="#{zaswiadczeniaView.listaeast2}" var="item2"
+                             selectionMode="single" selection="#{zaswiadczeniaView.selectedeast}" sortBy="#{item2.pracownik.nazwiskoImie}"
                              rowKey="#{item2.id}" emptyMessage="Firma nie ma pracowników"
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{angazView.aktywuj(angazView.selectedeast)}" partialSubmit="true" global="false" update="north,@(.formumowa)"/>
+                    <p:ajax event="rowSelect" listener="#{zaswiadczeniaView.aktywuj(angazView.selectedeast)}" partialSubmit="true" global="false" update="north,@(.formcentrum)"/>
                     <p:column sortBy="#{item2.pracownik.nazwiskoImie}">
                         <h:outputText value="#{item2.pracownik.nazwiskoImie}"/>
                     </p:column>
