--- a/kadry/src/main/webapp/wydruki/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/wydruki/sub/layout/west.xhtml
@@ -33,7 +33,7 @@
                              rowKey="#{item2.id}" emptyMessage="Firma nie ma pracowników"
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{zaswiadczeniaView.aktywuj(angazView.selectedeast)}" partialSubmit="true" global="false" update="north,@(.formcentrum)"/>
+                    <p:ajax event="rowSelect" listener="#{zaswiadczeniaView.aktywuj(zaswiadczeniaView.selectedeast)}" partialSubmit="true" global="false" update="north,@(.formcentrum)"/>
                     <p:column sortBy="#{item2.pracownik.nazwiskoImie}">
                         <h:outputText value="#{item2.pracownik.nazwiskoImie}"/>
                     </p:column>
