--- a/kadry/src/main/webapp/umowa/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/layout/west.xhtml
@@ -15,13 +15,14 @@
                              rowKey="#{item1.id}" 
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{umowaView.aktywujPracAngaze(firmaView.selectedeast)}" partialSubmit="true" global="false" update="north,@(.formumowaprac)"/>
+                    <p:ajax event="rowSelect" listener="#{umowaView.aktywujPracAngaze(firmaView.selectedeast)}" partialSubmit="true" global="true" update="north,@(.formumowaprac)"/>
                     <p:column sortBy="#{item1.nazwa}" sortOrder="asc" filterBy="#{item1.nazwa}" filterMatchMode="contains">
                         <h:outputText value="#{item1.nazwa}"/>
                     </p:column>
                 </p:dataTable>
             </p:panel>
         </h:form>
+    
          <h:form styleClass="formumowaprac" id="EastPracownicy">
             <p:panel header="Pracownicy">
                 <p:dataTable id="datalist" value="#{umowaView.listaeast2}" var="item2"
@@ -29,7 +30,7 @@
                              rowKey="#{item2.id}" emptyMessage="Firma nie ma pracowników"
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{umowaView.aktywuj(umowaView.selectedeast)}" partialSubmit="true" global="false" update="north,@(form)"/>
+                    <p:ajax event="rowSelect" listener="#{umowaView.aktywuj(umowaView.selectedeast)}" partialSubmit="true" global="true" update="north,@(form)"/>
                     <p:column sortBy="#{item2.pracownik.nazwiskoImie}">
                         <h:outputText value="#{item2.pracownik.nazwiskoImie}"/>
                     </p:column>
