--- a/kadry/src/main/webapp/umowa/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/layout/west.xhtml
@@ -30,7 +30,7 @@
                              rowKey="#{item2.id}" emptyMessage="Firma nie ma pracowników"
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{umowaView.aktywuj(umowaView.selectedeast)}" partialSubmit="true" global="true" update="north,@(form)"/>
+                    <p:ajax event="rowSelect" listener="#{umowaView.aktywuj(umowaView.selectedeast)}" partialSubmit="true" global="true" update="north,@(.formumowa)"/>
                     <p:column sortBy="#{item2.pracownik.nazwiskoImie}">
                         <h:outputText value="#{item2.pracownik.nazwiskoImie}"/>
                     </p:column>
