--- a/kadry/src/main/webapp/umowa/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/layout/west.xhtml
@@ -25,6 +25,8 @@
     
          <h:form styleClass="formumowaprac" id="EastPracownicy">
             <p:panel header="Pracownicy">
+                <p:fragment>
+                <p:autoUpdate/>
                 <p:dataTable id="datalist" value="#{umowaView.listaeast2}" var="item2"
                              selectionMode="single" selection="#{umowaView.selectedeast}" sortBy="#{item2.pracownik.nazwiskoImie}"
                              rowKey="#{item2.id}" emptyMessage="Firma nie ma pracowników"
@@ -32,9 +34,11 @@
                              >
                     <p:ajax event="rowSelect" listener="#{umowaView.aktywuj(umowaView.selectedeast)}" partialSubmit="true" global="true" update="north,@(.formumowa)"/>
                     <p:column sortBy="#{item2.pracownik.nazwiskoImie}">
-                        <h:outputText value="#{item2.pracownik.nazwiskoImie}"/>
+                        <h:outputText value="#{item2.pracownik.nazwiskoImie}" rendered="#{item2.jestumowaAktywna(wpisView.rokWpisu, wpisView.miesiacWpisu) eq true}" />
+                        <h:outputText value="#{item2.pracownik.nazwiskoImie}" rendered="#{item2.jestumowaAktywna(wpisView.rokWpisu, wpisView.miesiacWpisu) eq false}" style="color: #9E9E9E"/>
                     </p:column>
                 </p:dataTable>
+                </p:fragment>
             </p:panel>
          </h:form><!-- comment -->
     
