--- a/kadry/src/main/webapp/pit4/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/pit4/sub/layout/west.xhtml
@@ -15,12 +15,17 @@
                              rowKey="#{item1.id}" 
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{kartaWynagrodzenPIT4View.aktywuj(firmaView.selectedeast)}" partialSubmit="true" global="true" update="north,@(form)"/>
+                    <p:ajax event="rowSelect" listener="#{kartaWynagrodzenPIT4View.aktywuj(firmaView.selectedeast)}" partialSubmit="true" global="true"/>
+                    <p:ajax event="rowSelect" listener="#{pit4RView.init()}" update="north,@(.formpit4)"/>
                     <p:column sortBy="#{item1.nazwa}" sortOrder="asc" filterBy="#{item1.nazwa}" filterMatchMode="contains">
-                        <h:outputText value="#{item1.nazwa}"/>
+                        <h:outputText value="#{item1.nazwa}" rendered="#{item1.isSadekalracjePIT4(wpisView.rokWpisu)}" style="color:green;"/>
+                        <h:outputText value="#{item1.nazwa}" rendered="#{item1.isSadekalracjePIT4(wpisView.rokWpisu) eq false}"/>
                     </p:column>
                 </p:dataTable>
             </p:panel>
+               <p:outputPanel style="padding: 10px;">
+                   <h:outputText value="firmy wyróżnione na zielono mają sporządzone deklaracje"/>
+               </p:outputPanel>
         </h:form>
     
 </ui:composition>   
