--- a/kadry/src/main/webapp/pit4/sub/layout/north.xhtml
+++ b/kadry/src/main/webapp/pit4/sub/layout/north.xhtml
@@ -24,15 +24,15 @@
                   <div class="inline-block col-1 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
                         <p:selectOneMenu id="rokWpisu" value="#{wpisView.rokWpisu}"  style="width: 100px;">
                             <f:selectItems value="#{roki.rokiList}"/>
-                            <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
+                            <p:ajax event="change" partialSubmit="true" global="true" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
                         </p:selectOneMenu>
                     </div>
-                    <div class="inline-block col-3 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
+<!--                    <div class="inline-block col-3 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
                        <p:selectOneMenu id="miesiacWpisu" value="#{wpisView.miesiacWpisu}"  style="width: 100px;">
                             <f:selectItems value="#{mce.mceList}"/>
                             <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
                         </p:selectOneMenu>
-                    </div>
+                    </div>-->
             </div>
         </h:form>
     
