--- a/kadry/src/main/webapp/admin/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/admin/sub/layout/west.xhtml
@@ -36,8 +36,8 @@
                     <p:ajax event="filter" global="false"/>
                     <p:ajax event="rowSelect" listener="#{angazView.aktywujPlace(angazView.selectedeast)}" partialSubmit="true" update="north,@(.formadmin)"/>
                     <p:column filterBy="#{item2.pracownik.nazwiskoImie}" filterMatchMode="contains" filterable="true">
-                        <h:outputText value="#{item2.pracownik.nazwiskoImie}" rendered="#{item2.umowaList ne null}" />
-                        <h:outputText value="#{item2.pracownik.nazwiskoImie}" rendered="#{item2.umowaList eq null}" style="color: #9E9E9E"/>
+                        <h:outputText value="#{item2.pracownik.nazwiskoImie}" rendered="#{item2.jestumowaAktywna(wpisView.rokWpisu, wpisView.miesiacWpisu) eq true}" />
+                        <h:outputText value="#{item2.pracownik.nazwiskoImie}" rendered="#{item2.jestumowaAktywna(wpisView.rokWpisu, wpisView.miesiacWpisu) eq false}" style="color: #9E9E9E"/>
                     </p:column>
                 </p:dataTable>
             </p:panel>
