naprawa poz mianie firmy dlugo trzeba czekac na aktualizacje listy pracownikow place

--- a/kadry/src/main/webapp/admin/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/admin/sub/layout/west.xhtml
@@ -14,8 +14,7 @@
                              rowKey="#{item1.id}" 
                              style="height: 350px;overflow-y: scroll;"
                              >
-                    <p:ajax event="rowSelect" listener="#{angazView.findByFirma(firmaView.selectedeast)}" update="@(.formadminwest) north "/>
-                    <p:ajax event="rowSelect" listener="#{angazView.aktywujPracAngaze(firmaView.selectedeast)}" partialSubmit="true" global="true" update="@(.formadmin)"/>
+                    <p:ajax event="rowSelect" listener="#{angazView.aktywujPracAngaze(firmaView.selectedeast)}" partialSubmit="true" global="true" update="north @(.formadmin) @(.formadminwest)"/>
                     <p:column sortBy="#{item1.nazwa}" sortOrder="asc" filterBy="#{item1.nazwa}" filterMatchMode="contains">
                         <h:outputText value="#{item1.nazwa}"/>
                     </p:column>
