--- a/kadry/src/main/webapp/admin/sub/layout/west.xhtml
+++ b/kadry/src/main/webapp/admin/sub/layout/west.xhtml
@@ -9,7 +9,7 @@
     
         <h:form>
             <p:panel header="Wykaz firma" style="margin-top: 80px;"> 
-                <p:dataTable id="datalist" value="#{firmaView.lista}" var="item1" 
+<!--                <p:dataTable id="datalist" value="#{firmaView.lista}" var="item1" 
                              selectionMode="single" selection="#{firmaView.selectedeast}"
                              rowKey="#{item1.id}" 
                              style="height: 350px;overflow-y: scroll;"
@@ -18,7 +18,11 @@
                     <p:column sortBy="#{item1.nazwa}" sortOrder="asc" filterBy="#{item1.nazwa}" filterMatchMode="contains">
                         <h:outputText value="#{item1.nazwa}"/>
                     </p:column>
-                </p:dataTable>
+                </p:dataTable>-->
+                <p:selectOneListbox value="#{firmaView.selectedeast}" filter="true" filterMatchMode="contains" converter="#{firmaKadryConverter}" scrollHeight="350" style="width: 90%;">
+                    <p:ajax event="change" listener="#{angazView.aktywujPracAngaze(firmaView.selectedeast)}" partialSubmit="true" global="true" update="north @(.formadmin) @(.formadminwest)"/>
+                    <f:selectItems value="#{firmaView.lista}" var="p" itemLabel="#{p.nazwa}" itemValue="#{String.valueOf(p.id)}" />
+                </p:selectOneListbox>
             </p:panel>
         </h:form>
     <h:form id="EastPracownicy" styleClass="formadminwest">
@@ -27,7 +31,11 @@
                     <p:ajax event="change" listener="#{angazView.pobierzpracownikow}" update="@form" global="false"/>
                 </p:selectBooleanCheckbox>
                 <p:outputLabel for="wyboropcji" value="pobierz wszystkich"/>
-                <p:dataTable id="datalist" value="#{angazView.listaeast}" var="item2"
+                <p:selectOneListbox value="#{angazView.selectedeast}" filter="true" filterMatchMode="contains" converter="#{angazConverter}" scrollHeight="350"  style="width: 90%;">
+                    <p:ajax event="change" listener="#{angazView.aktywujPlace(angazView.selectedeast)}" partialSubmit="true" global="true" update="north @(.formadmin) @(.formadminwest)"/>
+                    <f:selectItems value="#{angazView.listaeast}" var="p" itemLabel="#{p.nazwiskoiImie}" itemValue="#{String.valueOf(p.id)}"/>
+                </p:selectOneListbox>
+<!--                <p:dataTable id="datalist" value="#{angazView.listaeast}" var="item2"
                              selectionMode="single" selection="#{angazView.selectedeast}"
                              rowKey="#{item2.id}" emptyMessage="Firma nie ma pracowników"
                              style="height: 350px;overflow-y: scroll;"
@@ -38,7 +46,7 @@
                         <h:outputText value="#{item2.pracownik.nazwiskoImie}" rendered="#{item2.jestumowaAktywna(wpisView.rokWpisu, wpisView.miesiacWpisu) eq true}" />
                         <h:outputText value="#{item2.pracownik.nazwiskoImie}" rendered="#{item2.jestumowaAktywna(wpisView.rokWpisu, wpisView.miesiacWpisu) eq false}" style="color: #9E9E9E"/>
                     </p:column>
-                </p:dataTable>
+                </p:dataTable>-->
             </p:panel>
         </h:form>
     
