--- a/npkpir_23/web/ksiegowaFK/sub/layout/west_plankont.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/layout/west_plankont.xhtml
@@ -17,6 +17,7 @@
                 <p:menuitem value="klasyfikacja kont"  action="#{menu_plankont.ufile5(true)}" icon="ui-icon-circle-arrow-e"  style="#{menu_plankont.file5style}"/>  
                 <p:menuitem value="implementacje"  action="#{menu_plankont.ufile6(true)}" icon="ui-icon-circle-arrow-e"  style="#{menu_plankont.file6style}"/>  
                 <p:menuitem value="porównanie nazw"  action="#{menu_plankont.ufile7(true)}" icon="ui-icon-circle-arrow-e" style="#{menu_plankont.file7style}"/>  
+                <p:menuitem value="import planu kont"  action="#{menu_plankont.ufile8(true)}" icon="ui-icon-circle-arrow-e" style="#{menu_plankont.file8style}"/>  
             </p:menu>
         </h:form>
         <p:panel>
