naprawa porzadkowania kont nowa tabela konto zapis.

--- a/npkpir_23/web/ksiegowaFK/sub/layout/west_plankont.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/layout/west_plankont.xhtml
@@ -18,6 +18,7 @@
                 <p:menuitem value="implementacje"  action="#{menu_plankont.ufile6(true)}" icon="ui-icon-circle-arrow-e"  style="#{menu_plankont.file6style}"/>  
                 <p:menuitem value="porównanie nazw"  action="#{menu_plankont.ufile7(true)}" icon="ui-icon-circle-arrow-e" style="#{menu_plankont.file7style}"/>  
                 <p:menuitem value="import planu kont"  action="#{menu_plankont.ufile8(true)}" icon="ui-icon-circle-arrow-e" style="#{menu_plankont.file8style}"/>  
+                <p:menuitem value="wykaz konto-pozycja"  action="#{menu_plankont.ufile9(true)}" icon="ui-icon-circle-arrow-e" style="#{menu_plankont.file9style}"/>
             </p:menu>
         </h:form>
         <p:panel>
