--- a/npkpir_23/web/manager/sub/layout/west.xhtml
+++ b/npkpir_23/web/manager/sub/layout/west.xhtml
@@ -11,14 +11,14 @@
             <h:form>
                 <p:menu >
                     <p:menuitem value="podmioty"  outcome="podmioty" icon="ui-icon-circle-arrow-e"/>
-                    <p:menuitem value="podatnik-księgowa"  outcome="podatnikksiegowa" icon="ui-icon-circle-arrow-e"/>
+                    <p:menuitem value="podatnik-księgowa"  outcome="podatnikksiegowa" icon="ui-icon-circle-arrow-e" rendered="#{facesContext.externalContext.remoteUser eq '9'}"/>
                     <p:menuitem value="dane podatników" outcome="sprawozdaniefin" icon="ui-icon-circle-arrow-e"/>
                     <p:menuitem value="dodaj os.fizyczną"  outcome="dodpodatnika" icon="ui-icon-circle-arrow-e"/>  
                     <p:menuitem value="dodaj spółkę cyw."  outcome="dodpodatnikaSC" icon="ui-icon-circle-arrow-e"/>
                     <p:menuitem value="nowe podmioty" outcome="nowepodmioty" icon="ui-icon-circle-arrow-e"/>  
-                    <p:menuitem value="aktywacja" outcome="aktywacja" icon="ui-icon-circle-arrow-e"/>  
+                    <p:menuitem value="aktywacja" outcome="aktywacja" icon="ui-icon-circle-arrow-e" rendered="#{facesContext.externalContext.remoteUser eq '9'}"/>  
                 </p:menu>
-                <p:menu>
+                <p:menu rendered="#{facesContext.externalContext.remoteUser eq '9'}">
                     <p:menuitem value="rodz. dokumentów"  outcome="rodzajedok" icon="ui-icon-circle-arrow-e" />  
                     <p:menuitem value="stawki podatkowe"  outcome="podstawki" icon="ui-icon-circle-arrow-e"/>  
                     <p:menuitem value="terminy płatności."  outcome="terminy" icon="ui-icon-circle-arrow-e"/>  
