--- a/kadry/src/main/webapp/wskazniki/sub/layout/north.xhtml
+++ b/kadry/src/main/webapp/wskazniki/sub/layout/north.xhtml
@@ -21,16 +21,10 @@
                     <div class="inline-block  col-2 bg-taxman text-2xl flex-auto text-white font-bold text-center p-1 border-round">
                          <h:outputText value="#{wpisView.umowa.nrkolejny}"   rendered="#{wpisView.umowa ne null}"/>
                     </div>
-                  <div class="inline-block col-1 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
-                        <p:selectOneMenu id="rokWpisu" value="#{wpisView.rokWpisu}"  style="width: 100px;">
-                            <f:selectItems value="#{roki.rokiList}"/>
-                            <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
-                        </p:selectOneMenu>
-                    </div>
-                    <div class="inline-block col-3 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
-                       <p:selectOneMenu id="miesiacWpisu" value="#{wpisView.miesiacWpisu}"  style="width: 100px;">
-                            <f:selectItems value="#{mce.mceList}"/>
-                            <p:ajax event="change" partialSubmit="true" global="false" update="@(form)"  listener="#{updateClassView.updateUmowa()}"/>
+                      <div class="inline-block col-1 bg-taxman text-3xl flex-auto text-white font-bold text-center p-1 border-round">
+                      <p:selectOneMenu id="rokWpisu" value="#{wpisView.okreswpisu}"  style="width: 150px;" converter="#{okresConverter}">
+                          <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
+                          <p:ajax event="change" partialSubmit="true" global="true" update="@(form)"  listener="#{updateClassView.updateWydruki()}"/>
                         </p:selectOneMenu>
                     </div>
             </div>
