--- a/npkpir_23/web/sub/layout/south.xhtml
+++ b/npkpir_23/web/sub/layout/south.xhtml
@@ -8,8 +8,6 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <pe:layoutPane position="south" size="50" closable="true">
-            Podatkowa księga przychodów i rozchodów online. Wszelkie prawa zastrzeżone. Szczecin 2012
-    </pe:layoutPane>
+    <h:outputText styleClass="text-sm" value="Podatkowa księga przychodów i rozchodów online. Szczecin 2012-2024"/>
 </ui:composition>   
 
