--- a/npkpir_23/web/resources/cssnew/style.css
+++ b/npkpir_23/web/resources/cssnew/style.css
@@ -7,7 +7,7 @@
 */
 body { 
     font-size: 9pt !important;
-    font-family: TimesNewRoman !important;
+    font-family: Lucida Grande, Lucida Sans, Arial, sans-serif !important;
     font-weight: 500;
     width: 99%;
 }
