--- a/npkpir_23/web/sub/layout/north.xhtml
+++ b/npkpir_23/web/sub/layout/north.xhtml
@@ -7,8 +7,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:pe="http://primefaces.org/ui/extensions">
-    <pe:layoutPane position="north" size="50" resizable="true" closable="true">
-        Biuro Rachunkowe Taxman Grzegorz Grzelczyk
-    </pe:layoutPane>
-</ui:composition>   
+ 
+     <h:outputText styleClass="text-sm" value="Biuro Rachunkowe Taxman Grzegorz Grzelczyk"/>
+ </ui:composition>   
 
